<resources>
    <string name="app_name">iMApp</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="scan_information">Tekan button scan barcode di bawah untuk memulai scan barcode.</string>
    <string name="vmi">VMI</string>
    <string name="scm">SCM</string>
    <string name="welcome_message">Halo, user!</string>
    <string name="no_order_xx_yy_zzzz">No. Order: XX/YY/ZZZZ</string>
    <string name="tgl_kirim_28_10_2016">Tgl kirim: 28/10/2016</string>
    <string name="status_info">Status: Proses</string>
    <string name="gambar_barang">Gambar Barang</string>
    <string name="input_qty">Jumlah (Ukuran Besar)</string>
    <string name="next_button">LANJUT</string>
    <string name="input_qty_done_button">SELESAI</string>
    <string name="ack_info_textview">Scan Barcode Surat Jalan</string>
    <string name="history_order_textview">History Order</string>
    <string name="scan_barcode_text_button">Scan Barcode</string>
    <string name="so_text_title">Scan Barcode Barang</string>
    <string name="nama_barang_column_name">Nama Barang</string>
    <string name="qty_column_name">Qty</string>
    <string name="rescan_button">Rescan</string>
    <string name="so_input_qty">Stock Opname: Input Sisa Stok</string>
    <string name="so_scan_barcode">Stock Opname: Scan Barcode Barang</string>
    <string name="so_sisa_stok">Stock Opname: Sisa Stok</string>
    <string name="sort_by_order_button_text">SORT BY ORDER</string>
    <string name="sort_by_item_button_text">SORT BY ITEM</string>
    <string name="history_order_information">Pilih history order berdasarkan pesanan atau nama barang</string>
    <string name="button_3_bulan_text">3 BULAN</string>
    <string name="btn_6_bulan_text">6 BULAN</string>
    <string name="button_1_tahun_text">12 BULAN</string>
    <string name="button_2_tahun_text">2 TAHUN</string>
    <string name="check">Check</string>
    <string name="history_by_item_label">History By Item</string>
    <string name="ack_check_list">ACK List</string>
    <string name="ack_scan_label">ACK: Scan Surat Jalan</string>
    <string name="konfirmasi_button_txt">Konfirmasi</string>
    <string name="pilih_periode_text">Pilih Periode:</string>
    <string name="satuan_text">PAK</string>
    <string name="historybyitem_item_text">BUKU TAHAPAN BCA</string>
    <string name="tampilkan_surat_jalan">Tampilkan surat jalan</string>
    <string name="ack">ACK</string>
    <string name="ack_info">Klik button di bawah untuk menampilkan data surat jalan yang ada</string>
    <string name="log_out">Log Out</string>
</resources>
