<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rnd.imapp.Fragment.HistoryOrderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_history_colour"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/history_order_textview"
                android:textSize="21sp"/>

            <TextView
                android:paddingStart="60dp"
                android:paddingEnd="60dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/history_order_information"
                android:maxLines="2"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnByOrder"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:text="@string/sort_by_order_button_text"/>
        <Button
            android:id="@+id/btnByItem"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:text="@string/sort_by_item_button_text"/>
    </LinearLayout>

</FrameLayout>
