<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_history_by_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rnd.imapp.Activity.HistoryByOrderActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/icon_history_colour"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="Pilih Periode:"
            android:textSize="21sp"/>
        
        <Button
            android:id="@+id/btn3bulan"
            android:layout_marginTop="40dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_3_bulan_text"
            android:textColor="@color/blue"
            android:textSize="22sp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/btn6bulan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/btn_6_bulan_text"
            android:textColor="@color/blue"
            android:textSize="22sp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_1_tahun_text"
            android:textColor="@color/blue"
            android:textSize="22sp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/button_2_tahun_text"
            android:textColor="@color/blue"
            android:textSize="22sp"
            style="?android:attr/borderlessButtonStyle"/>

    </LinearLayout>

</RelativeLayout>
