<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rnd.imapp.Fragment.ACKFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:gravity="center"
            android:weightSum="1">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_ack_colour"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textAlignment="center"
                android:text="@string/ack"
                android:textSize="21sp"/>

            <TextView
                android:paddingStart="45dp"
                android:paddingEnd="45dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/ack_info"
                android:maxLines="2"
                 />

        </LinearLayout>

        <Button
            android:id="@+id/btnScanACK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="60dp"
            android:text="@string/tampilkan_surat_jalan"/>
    </LinearLayout>

</FrameLayout>
